--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body {
     font-family: 'Comic Sans MS', monospace;
     background-color: aliceblue;
-    text-align: center;
+}
+h1 {
+    font-size: 20px;
+}
+h2 {
+    font-size: 15px;
 }
